# grace

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  build.rs  codegen.rs
src/: buffer.rs  (+10 more)
tests/mdd/: Cargo.toml  sarzak.toml
tests/mdd/models/: associative.json  everything.json  external.json  imported_object.json  isa.json  one_to_many.json  one_to_one.json
tests/mdd/src/: app.rs  associative_domain.rs  domain.rs  everything.rs  everything_domain.rs  imported_object_domain.rs  isa_domain.rs  lib.rs  one_to_many_domain.rs  one_to_one.rs  one_to_one_domain.rs
tests/mdd/src/app/: everything.rs
tests/mdd/src/app/everything/: types.rs
tests/mdd/src/associative_domain/: store.rs  types.rs
tests/mdd/src/associative_domain/types/: acknowledged_event.rs  anchor.rs  event.rs  isa_ui.rs  state.rs  subtype_anchor.rs
tests/mdd/src/domain/: associative.rs  associative_rwlock.rs  associative_rwlock_vec.rs  associative_ts.rs  associative_vec.rs  everything.rs  everything_rwlock.rs  everything_rwlock_vec.rs  everything_vec.rs  external_vec.rs  imported_object.rs  imported_object_rwlock_vec.rs  imported_object_ts.rs  isa.rs  isa_rwlock.rs  isa_rwlock_vec.rs  isa_vec.rs  one_to_many.rs  one_to_many_rwlock.rs  one_to_many_vec.rs  one_to_one_rwlock.rs  one_to_one_rwlock_vec.rs  one_to_one_vec.rs  sarzak.rs  sarzak_rwlock.rs  sarzak_ts.rs  sarzak_vec.rs
tests/mdd/src/domain/associative/: store.rs  types.rs
tests/mdd/src/domain/associative_rwlock/: store.rs  types.rs
tests/mdd/src/domain/associative_rwlock_vec/: store.rs  types.rs
tests/mdd/src/domain/associative_ts/: store.rs  types.rs
tests/mdd/src/domain/associative_vec/: store.rs  types.rs
tests/mdd/src/domain/everything/: store.rs  types.rs
tests/mdd/src/domain/everything_rwlock/: store.rs  types.rs
tests/mdd/src/domain/everything_rwlock_vec/: store.rs  types.rs
tests/mdd/src/domain/everything_ts/: store.rs  types.rs
tests/mdd/src/domain/everything_vec/: store.rs  types.rs
tests/mdd/src/domain/external_rwlock/: store.rs  types.rs
tests/mdd/src/domain/external_rwlock_vec/: store.rs  types.rs
tests/mdd/src/domain/external_ts/: store.rs  types.rs
tests/mdd/src/domain/external_vec/: store.rs  types.rs
tests/mdd/src/domain/imported_object/: store.rs  types.rs
tests/mdd/src/domain/imported_object_rwlock/: store.rs  types.rs
tests/mdd/src/domain/imported_object_rwlock_vec/: store.rs  types.rs
tests/mdd/src/domain/imported_object_ts/: store.rs  types.rs
tests/mdd/src/domain/imported_object_vec/: store.rs  types.rs
tests/mdd/src/domain/isa/: store.rs  types.rs
tests/mdd/src/domain/isa_clone/: from.rs  store.rs  types.rs
tests/mdd/src/domain/isa_rwlock/: store.rs  types.rs
tests/mdd/src/domain/isa_rwlock_vec/: store.rs  types.rs
tests/mdd/src/domain/isa_ts/: store.rs  types.rs
tests/mdd/src/domain/isa_vec/: store.rs  types.rs
tests/mdd/src/domain/one_to_many/: store.rs  types.rs
tests/mdd/src/domain/one_to_many_rwlock/: store.rs  types.rs
tests/mdd/src/domain/one_to_many_rwlock_vec/: store.rs  types.rs
tests/mdd/src/domain/one_to_many_ts/: store.rs  types.rs
tests/mdd/src/domain/one_to_many_vec/: store.rs  types.rs
tests/mdd/src/domain/one_to_one/: store.rs  types.rs
tests/mdd/src/domain/one_to_one_rwlock/: store.rs  types.rs
tests/mdd/src/domain/one_to_one_rwlock_vec/: store.rs  types.rs
tests/mdd/src/domain/one_to_one_ts/: store.rs  types.rs
tests/mdd/src/domain/one_to_one_vec/: store.rs  types.rs
tests/mdd/src/domain/sarzak/: store.rs  types.rs
tests/mdd/src/domain/sarzak_rwlock/: store.rs  types.rs
tests/mdd/src/domain/sarzak_ts/: store.rs  types.rs
tests/mdd/src/domain/sarzak_vec/: store.rs  types.rs
tests/mdd/src/everything/: everything.rs  rando_object.rs  types.rs
tests/mdd/src/everything/types/: everything.rs  rando_object.rs
tests/mdd/src/everything_domain/: store.rs  types.rs
tests/mdd/src/everything_domain/types/: everything.rs  rando_object.rs
tests/mdd/src/imported_object_domain/: store.rs  types.rs
tests/mdd/src/imported_object_domain/types/: another_object.rs
tests/mdd/src/isa_domain/: store.rs  types.rs
tests/mdd/src/isa_domain/types/: not_important.rs  simple_subtype_a.rs  simple_subtype_b.rs  simple_supertype.rs  subtype_a.rs  subtype_b.rs  super_t.rs
tests/mdd/src/one_to_many_domain/: store.rs  types.rs
tests/mdd/src/one_to_one_domain/: store.rs  types.rs
tests/mdd/src/sarzak_domain/: store.rs  types.rs
(+398 files in other folders)
