[package]
name = "grace"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
serde = { version = "1.0.152", features = ["derive"] }
sarzak = { path = "../sarzak" }
# sarzak = { git = "https://gitlab-runner:7kzem8nVeizSJQnLPWFY@git.uberfoo.com/sarzak/sarzak.git", branch = "develop" }
snafu = { version = "0.7.4", features = ["backtraces"] }
log = "0.4.17"
heck = "0.4.0"
uuid = { version = "1.2.2", features = ["v5"] }
serde_json = "1.0.91"
diff = "0.1.13"
tempfile = "3.3.0"
unicode-segmentation = "1.10.0"
names = "0.14.0"
chrono = "0.4.23"
fnv = "1.0.7"
rayon = "1.7.0"
lazy_static = "1.4.0"
ansi_term = "0.12.1"

[build-dependencies]
chrono = "0.4.23"

[dev-dependencies]
env_logger = "0.10.0"
criterion = { version = "0.4.0", features = ["html_reports"] }

[features]
default = ["vscode"]
vscode = []

[[bench]]
name = "everything"
harness = false
