[package]
name = "mdd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
bincode = "1.3.3"
fnv = "1.0.7"
heck = "0.4.1"
log = "0.4.19"
serde = { version = "1.0.152", features = ["derive", "rc"] }
serde_json = "1.0.93"
tracy-client = "0.15.2"
uuid = { version = "1.2.2", features = ["v4", "v5", "serde"] }
